<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OZNER IFAMILY</string>
    <string name="Advise_InputAdvise">Please enter the suggestions</string>
    <string name="my_device">My Device</string>
    <string name="my_burse">My private coffer</string>
    <string name="Center_MyOrder">My order</string>
    <string name="Center_getRedbag">Receiving bonus</string>
    <string name="Center_MyTicket">My ticket</string>
    <string name="my_friend">My friend</string>
    <string name="view_report">Checking water quality examining report </string>
    <string name="feedback_commend">My proposal </string>
    <string name="my_setting">Settings</string>
    <string name="Center_Setup">Settings</string>
    <string name="Center_Allow_PushMsg">Allow message pushing</string>
    <string name="Center_Unit">Measurement unit</string>
    <string name="Center_About_Ozner">About</string>
    <string name="Center_AM">AM</string>
    <string name="Center_About">About</string>
    <string name="Center_Logout">Log out</string>
    <string name="Center_ToLogOut">To log out?</string>
    <string name="Center_Verify_Msg">Validation message</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="server_Exception">Service Exception Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_other_device">Other devices in your account login, please sign in again.</string>
    <string name="login_p_tishi">Agreed to OZNER IFAMILY Clauses.</string>
    <string name="loging_ty_xiexi">Please agree "OZNER IFAMILY Disclaimer"</string>
    <string name="login_btn_skip">Skip</string>
    <string name="login_btn_getphone">Obtain captcha</string>
    <string name="login_et_phone">Phone number</string>
    <string name="innet_wrong">Network Error</string>
    <string name="login_aync">Login</string>
    <string name="login_aync_ing">logging in. . .</string>
    <string name="login_et_phone_code">Captcha</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_voi">To obtain voice captcha</string>
    <string name="login_no_code">Fail to receive captcha by text message?</string>
    <string name="login_wrong_phone">Please enter phone number of 11 Arabic numbers </string>
    <string name="login_wrong_emptycode">Please enter captcha</string>
    <string name="login_wrong_login_error">Login failed check the phone number and verification code</string>
    <string name="login_wrong_Code_Outtime">Login failed verification code expired</string>
    <string name="login_wrong_Code_error">Login failed Error captcha</string>
    <string name="login_wrong_msg">Login failed</string>
    <string name="login_wrong_code">Captcha is incorrect, please re-enter</string>
    <string name="login_wrong_getcode">The captcha will sent out in text message,please keep an eye on check.</string>
    <string name="login_wrong_getvoice">You will receive 400 calls from voice, please note answer</string>
    <string name="login_code_timeout">%ds</string>
    <string name="login_code_sendwrong">Fail to send captcha</string>
    <string name="foot_sb">My device</string>
    <string name="foot_shop">Mall</string>
    <string name="foot_msg">Consult</string>
    <string name="foot_myself">Me</string>
    <string name="pre_purifier">Before</string>
    <string name="after_purifier">After</string>
    <string name="filter_status">Filter Status</string>
    <string name="filter_need_change">Please replace the filter</string>
    <string name="warm">Heat</string>
    <string name="refrigeration">Cool</string>
    <string name="power">Power</string>
    <string name="health">Healthy</string>
    <string name="generic">So-so</string>
    <string name="bad">Bad</string>
    <string name="cupDetail_tdsTitle">TDS value</string>
    <string name="cupDetail_tdsLevelNormal">SO-so</string>
    <string name="cupDetail_tdsValueNone">No</string>
    <string name="cupDetail_tdsShort_left">beat&#160;</string>
    <string name="cupDetail_tdsShort_right">&#160;of users</string>
    <string name="cupDetail_battery">d%</string>
    <string name="cupDetail_waterVolum">Water intake today:</string>
    <string name="cupDetail_waterTarget">Goal:</string>
    <string name="cupDetail_waterTemText">Temperature:</string>
    <string name="cupDetail_waterTemNormal">moderate</string>
    <string name="cupDetail_waterDrinkOk">Suitable for drinking</string>
    <string name="cupDetail_waterDrinkNo">Unsuitable for drinking</string>
    <string name="cupDetail_waterUtil">ml</string>
    <string name="purifierDetail_after">After purified, could direct drinking</string>
    <string name="purifierDetail_none">Unused,no data displayed</string>
    <string name="ozner_text">COPYRIGHT©2015 OZNER.ALL RIGHTS RESERVED</string>
    <string name="match_failed_csir">Pairing failed:</string>
    <string name="match_failed_happend">I have been paired up</string>
    <string name="network_command_error">Perform network operation failed</string>
    <string name="network_commanding">Submitting</string>
    <string name="hello_world">Hello world!</string>
    <string name="edittext_notice_0">Please input...</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="Baidu_Push_ApiKey">0si8AI4XyFKDbK7dWGIZG424</string>
    <string name="tap_legend_health">Healthy</string>
    <string name="tap_legend_normal">So-so</string>
    <string name="tap_legend_bad">Bad</string>
    <string name="Purifier_quality_exp">Pure water exponential distribution</string>
    <string name="Center_GetMoney">Receiving bonus</string>
    <string name="Center_MyCoffers">My private coffer</string>
    <string name="Center_Vip">vip</string>
    <string name="Center_Month">Month</string>
    <string name="Center_Day">Day</string>
    <string name="Center_PM">Afternoon</string>
    <string name="Center_None">No data</string>
    <string name="Center_Repeat">Reply:</string>
    <string name="Center_LoadFail">Failed to load!</string>
    <string name="Center_LoadVolumRank">Loading water intake ranking</string>
    <string name="Center_LoadTDSRank">Loading TDS Ranking</string>
    <string name="Center_Loading">Loading...</string>
    <string name="Center_LeavingMsg">Sending...</string>
    <string name="Center_MyShort">Ranking</string>
    <string name="Center_MyFriend">Friends</string>
    <string name="Center_SearchFail">No Search Friends</string>
    <string name="Center_HadDevice">Existing device</string>
    <string name="Center_Add_Friend">Add Friend</string>
    <string name="Center_Immediately_Add">Add</string>
    <string name="Center_Device_Friend">Equipment friends</string>
    <string name="Center_No_Friend_0">Experience with your friends</string>
    <string name="Center_No_Friend_1">OZNER intelligent life services</string>
    <string name="Center_verify_tips">You need to send a verification request, waiting for the other accept</string>
    <string name="Center_Send">Send</string>
    <string name="Center_Cancel">Cancel</string>
    <string name="Center_Add">Add</string>
    <string name="Center_Added">Added</string>
    <string name="Center_PurifierTdsRank">Water purifier TDS Ranking </string>
    <string name="Center_TapTdsRank">Water Probe TDS Ranking</string>
    <string name="Center_CupTdsRank">Smart cup TDS Ranking</string>
    <string name="Center_CupWaterRank">Smart cup water intake Ranking</string>
    <string name="Center_LikeMe">Like me</string>
    <string name="Center_Wait_Verify">Awaiting verification</string>
    <string name="Center_Adsive">My proposal</string>
    <string name="Center_Advise_Result_up">Thanks for your comments</string>
    <string name="Center_Advise_Result_down">We will as soon as possible</string>
    <string name="Center_Adsive_Hint">If you use the process, have any questions or suggestions, please leave your valuable comments and suggestions, we will try to solve your problem.</string>
    <string name="Center_Submit">Submit</string>
    <string name="TDS">TDS</string>
    <string name="Center_Temp">Temperature</string>
    <string name="Center_Volumn">Water</string>
    <string name="Center_Centigrade">Degree centigrade</string>
    <string name="Center_Centigrade_Unit">(℃)</string>
    <string name="Center_Fahrenheit">Fahrenheit degree</string>
    <string name="Center_fahrenheit_Unit">(℉)</string>
    <string name="Center_ML">ML</string>
    <string name="Center_ML_Unit">(ML)</string>
    <string name="Center_DL">DL </string>
    <string name="Center_DL_Unit">(DL)</string>
    <string name="Center_OZ">OZ</string>
    <string name="share_title">分享给朋友</string>
    <string name="share_wx">微信</string>
    <string name="share_wxfriend">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_dx">短信</string>
    <string name="share_mail">邮件</string>
    <string name="share_url">复制链接</string>
    <string name="share_more">More</string>
    <string name="tdsText">Total dissolved solids</string>
    <string name="tdsTextIn">Total Dissolved Solids,Abbreviation TDS</string>
    <string name="tdsText1">\t\tAlso known as total dissolved solids,the measurement unit is mg / L (mg/L),which shows how much dissolved solids are dissolved in 1 liters of water. The higher the value of TDS,the more dissolved dissolved in water.</string>
    <string name="tdsText2">\t\tTotal dissolved solids refer to the total amount of all the solutes in water,including both inorganic and organic matter. Can probably understand the conductivity value in the solution of salt,in general,the higher the conductivity,salinity is higher,the higher the TDS.</string>
    <string name="tdsText3">\t\tIn the inorganic matter,in addition to dissolve into the ionic composition,but also may have a molecular like inorganic. Because the organic matter contained in the natural water and the inorganic substance which is in the form of molecular like can not be considered in general,so the salt content is generally called as total dissolved solid.</string>
    <string name="tdsText4">\t\tHowever,TDS does not reflect the quality of water in the specific water. Such as electrolytic water,due to the electrolysis of water,[OH]- and other charged ions significantly increased,the corresponding increase in the amount of conductive. For example,the original TDS in 17 of pure water by electrolysis of water machine after the alkaline water TDS value of about 300.</string>
    <string name="airOutside_know">Got it</string>
    <string name="text_null">No</string>
    <string name="null_text">No data</string>
    <string name="water_replenish_humTitle">Human body parts normal water rate</string>
    <string name="water_replenish_humEye">Eye\t35%-45%</string>
    <string name="water_replenish_humFace">Face\t32%-42%</string>
    <string name="water_replenish_humNeck">Neck\t35%-45%</string>
    <string name="water_replenish_humHands">Hand\t32%-38%</string>
    <string name="water_replenish_humtip">(for reference only)</string>
    <string name="water_replenish_humSeason">Different seasons each part of the water value will vary.</string>
    <string name="device_nonet_notice0">1.Please check that your device is powered</string>
    <string name="device_nonet_notice1">2.Please check your network is unobstructed</string>
    <string name="device_nonet_notice2">.If you still can not connect the device, please remove this device in the settings, re-pair</string>
    <string name="device_nonet_notice">Try the following manner:</string>
    <string name="press">Press</string>
    <string name="and">and</string>
    <string name="lamp_blinks">simultaneously,WIFI lamp blinks</string>
</resources>