<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="@string/device_nonet_notice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/device_nonet_notice0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/device_nonet_notice1" />

    <TextView
        android:id="@+id/purifier_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/device_nonet_notice2" />


    <TextView
        android:id="@+id/tv_air_know"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_below="@+id/main_ozner_open"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_blue_s_choose"
        android:gravity="center"
        android:text="@string/airOutside_know"
        android:textColor="@color/main_addDetail"
        android:textSize="16dp" />


</LinearLayout>
