<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cup_details_include_tds_relative"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tdsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lay_normal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:text="@string/cupDetail_tdsTitle"
        android:textColor="@color/cupDetail_textcolor"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/lay_tdsLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_tdsLevelImg"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />

        <TextView
            android:textSize="20dp"
            android:id="@+id/tv_tdsLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_tdsLevelImg"
            android:layout_marginLeft="3dp"
            android:text="@string/text_null"
            android:textColor="@color/cupDetail_textcolor" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tdsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/null_text"
        android:textColor="@color/cupDetail_textcolor"
        android:textSize="45dp" />

    <LinearLayout
        android:id="@+id/lay_tdsShort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tdsValue"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cupDetail_tdsShort_left"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_tdsShort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textColor="@color/cupDetail_textcolor"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cupDetail_tdsShort_right"
            android:textSize="20dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lay_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_tdsValue"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tdsLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textColor="@color/cupDetail_textNone"
            android:textSize="13dp"
            android:visibility="gone" />


    </LinearLayout>
</LinearLayout>